# posit-bfloat-testsystem

./: CMakeLists.txt  LICENSE  README.md  main.cpp
system/: CMakeLists.txt
system/include/: data_bank.h  test.h  test_data.h  test_manager.h  test_set.h
system/src/: test.cpp  test_data.cpp  test_manager.cpp  test_set.cpp
tests/: bench_math.h  benchmark_tests.h  profile_test.h  template_magic.h  test_type.h  validation_tests.h
tests/benchmark_tests/: basic_test.h  gauss_legendre.h  matrix_determinant.h  matrix_frobenius_norm.h  matrix_l1_norm.h  matrix_lu_decomposition.h  matrix_moore_penrose_pseudoinverse.h  matrix_mult.h  matrix_normalize.h  matrix_qr_decomposition.h  matrix_sum_sub.h  matrix_transpose.h  sigmoid.h  sigmoid_fast.h
tests/validation_tests/: basic_check_test.h
